# CLIAI

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: main.rs
src/model/: config.rs  mod.rs
src/model/openrouter/: request.rs  response.rs
src/network/: api.rs
src/utils/: loader.rs  mod.rs  verbose.rs
