[package]
name = "cliai"
version = "0.1.0"
edition = "2024"


[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
colored = "3.1.1"
terminal_size = "0.4.3"
directories = "6.0.0"
toml = "1.0.6+spec-1.1.0"
regex = "1.12.3"